--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": {
     "name": ",W. Franklin Simbeye",
     "email": "walusungu@gmail.com",
-    "url": "https://anael.biz"
+    "url": "https://anaelsolutions.com"
   },
   "homepage": "https://comsip.org.mw",
   "dependencies": {
